# Life_Dash

./: .gitignore  LICENSE  README.md  project_snapshot.txt  pyproject.toml  Видение сайта.txt
scripts/: daily_note_updater.py  mass_update_daily_notes.py  project_assembler.py
src/core/: config.py  database.py
