[tool.poetry]
name = "lifedash"
version = "0.1.0"
description = "Локальный аналитический дашборд на базе Obsidian"
authors = ["Daniil <dan4ik0408@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"

# Бэкенд и Веб
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
pydantic-settings = "^2.7.0"

# База данных
sqlmodel = "^0.0.34"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"           # Миграции базы данных
aiosqlite = "^0.20.0"         # Асинхронный драйвер для SQLite

# Аналитика и данные
plotly = "^6.0.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
python-dateutil = "^2.9.0"
python-frontmatter = "^1.1.0"   # Для парсинга Markdown Obsidian

# Утилиты
loguru = "^0.7.2"
typer = {extras = ["all"], version = "^0.15.1"}     # CLI интерфейс

[tool.poetry.group.dev.dependencies]
# Линтеры и форматирование
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"

# Тестирование
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"             # Нужен для тестирования эндпоинтов FastAPI

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Настройки вспомогательных инструментов ---

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88