[tool.poetry]
name = "lifedash"
version = "0.1.0"
description = "Локальный аналитический дашборд на базе Obsidian"
authors = ["Daniil <dan4ik0408@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"

# Бэкенд и Веб
fastapi = {extras = ["all"], version = "^0.115.0"} # extras ["all"] уже включает uvicorn и python-multipart
jinja2 = "^3.1.5"
pydantic-settings = "^2.7.0"
python-multipart = "^0.0.12"

# База данных
sqlmodel = "^0.0.22"

# Аналитика и данные
plotly = "^6.0.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
python-dateutil = "^2.9.0"
python-frontmatter = "^1.1.0"
pyyaml = "^6.0.2"

# Утилиты
loguru = "^0.7.2"
typer = {extras = ["all"], version = "^0.15.1"}     # Для работы CLI

[tool.poetry.group.dev.dependencies]
# Ruff заменяет flake8, isort и black
ruff = "^0.8.0"
mypy = "^1.13.0"

# Тестирование
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"        # Отчеты о покрытии тестами
httpx = "^0.28.1"            # Тестирование эндпоинтов FastAPI

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Настройки Ruff ---
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E, F - стандартные правила Flake8
# I - правила Isort (сортировка импортов)
# UP - рекомендации по обновлению синтаксиса до Python 3.12
# B - Bugbear (поиск вероятных багов)
# D - проверка документации (Docstrings)
# N - проверка именования (PEP8/Google naming)
# ANN - проверка аннотаций типов
select = ["E", "F", "I", "UP", "B", "D", "N", "ANN"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Настройки Pytest ---
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
# Автоматический запуск coverage для папки src
addopts = "--cov=src --cov-report=term-missing"

# --- Настройки Mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true